--- a/index.html
+++ b/index.html
@@ -26,10 +26,7 @@
     <div class="container" id="main">
         <div class="row">
             <h1 class="col-md-12 text-center">
-                UniBind: LLM-Augmented Unified and Balanced Representation Space to Bind Them All<br /> 
-                <small>
-                    Accepted to CVPR 2024
-                </small>
+                Whole-body Humanoid Robot Locomotion with Human Reference<br /> 
             </h1>
         </div>
         
@@ -39,10 +36,10 @@
                     <li>
 			<img src="./images/huiyi1.png" height="80px"><br>
                         <a href="https://qc-ly.github.io/" >
-                           Yuanhuiyi Lyu*
+                           Qiang Zhang*
                         </a>
                         
-                        <br /> AI Thrust, HKUST(GZ)
+                        <br /> MICS Thrust, HKUST(GZ)
                         <br /> &nbsp &nbsp
 
                     </li>
@@ -50,27 +47,27 @@
                     <li>
 			<img src="./images/xu1.png" height="80px"><br>
 			<a href="https://zhengxujosh.github.io/" >
-                        Xu Zheng*
+                        Cui Petter*
                       </a>
-                      <br /> AI Thrust, HKUST(GZ)
+                      <br /> PNDbotics
                       <br /> &nbsp &nbsp
                     </li>
                 <li>
                     <img src="./images/jiazhou2.png" height="80px"><br>
                     <a href="https://jiazhou-garland.github.io/" >
-                                Jiazhou Zhou
+                                 David Yan
                                 </a>
-                                <br /> AI Thrust, HKUST(GZ)
+                                <br /> PNDbotics
                                 <br /> &nbsp &nbsp
                             </li>
 
                             <li>
 			    <img src="./images/Addision.png" height="80px"><br>
                         <a href="https://addisonwang2013.github.io/vlislab/linwang.html">
-                           Addison Lin Wang
+                           Jingkai Sun
                         </a>
-                        <br /> AI & CMA Thrust, HKUST(GZ) 
-			    <br/> Dept. of CSE, HKUST 
+                        <br /> MICS Thrust, HKUST(GZ) 
+			<br /> &nbsp &nbsp 
                     </li>
                 </ul>
             </div>
