--- a/index.html
+++ b/index.html
@@ -72,7 +72,48 @@
                 </ul>
             </div>
         </div>
+        <div class="row">
+            <div class="col-md-12 text-center">
+                <ul class="list-inline">
+                    <li>
+			<img src="./images/huiyi1.png" height="80px"><br>
+                        <a href="https://qc-ly.github.io/" >
+                           Qiang Zhang*
+                        </a>
+                        
+                        <br /> MICS Thrust, HKUST(GZ)
+                        <br /> &nbsp &nbsp
 
+                    </li>
+
+                    <li>
+			<img src="./images/xu1.png" height="80px"><br>
+			<a href="https://zhengxujosh.github.io/" >
+                        Cui Petter*
+                      </a>
+                      <br /> PNDbotics
+                      <br /> &nbsp &nbsp
+                    </li>
+                <li>
+                    <img src="./images/jiazhou2.png" height="80px"><br>
+                    <a href="https://jiazhou-garland.github.io/" >
+                                 David Yan
+                                </a>
+                                <br /> PNDbotics
+                                <br /> &nbsp &nbsp
+                            </li>
+
+                            <li>
+			    <img src="./images/Addision.png" height="80px"><br>
+                        <a href="https://addisonwang2013.github.io/vlislab/linwang.html">
+                           Jingkai Sun
+                        </a>
+                        <br /> MICS Thrust, HKUST(GZ) 
+			<br /> &nbsp &nbsp 
+                    </li>
+                </ul>
+            </div>
+        </div>
 
 
         <!-- ##### Elements #####-->
