--- a/index.html
+++ b/index.html
@@ -78,10 +78,10 @@
                     <li>
 			<img src="./images/huiyi1.png" height="80px"><br>
                         <a href="https://qc-ly.github.io/" >
-                           Qiang Zhang*
+                           Yiqun Duan*
                         </a>
                         
-                        <br /> MICS Thrust, HKUST(GZ)
+                        <br /> AI Centre, UTS
                         <br /> &nbsp &nbsp
 
                     </li>
@@ -89,7 +89,7 @@
                     <li>
 			<img src="./images/xu1.png" height="80px"><br>
 			<a href="https://zhengxujosh.github.io/" >
-                        Cui Petter*
+                        Arthur Zhang
                       </a>
                       <br /> PNDbotics
                       <br /> &nbsp &nbsp
@@ -97,20 +97,11 @@
                 <li>
                     <img src="./images/jiazhou2.png" height="80px"><br>
                     <a href="https://jiazhou-garland.github.io/" >
-                                 David Yan
+                                 Renjing Xu
                                 </a>
-                                <br /> PNDbotics
+                                <br /> MICS Thrust, HKUST(GZ)
                                 <br /> &nbsp &nbsp
-                            </li>
-
-                            <li>
-			    <img src="./images/Addision.png" height="80px"><br>
-                        <a href="https://addisonwang2013.github.io/vlislab/linwang.html">
-                           Jingkai Sun
-                        </a>
-                        <br /> MICS Thrust, HKUST(GZ) 
-			<br /> &nbsp &nbsp 
-                    </li>
+        	</li>
                 </ul>
             </div>
         </div>
