--- a/index.html
+++ b/index.html
@@ -34,8 +34,6 @@
             <div class="col-md-12 text-center">
                 <ul class="list-inline">
                     <li>
-			<img src="./images/huiyi1.png" height="80px"><br>
-                        <a href="https://qc-ly.github.io/" >
                            Qiang Zhang*
                         </a>
                         
@@ -45,16 +43,12 @@
                     </li>
 
                     <li>
-			<img src="./images/xu1.png" height="80px"><br>
-			<a href="https://zhengxujosh.github.io/" >
                         Cui Petter*
                       </a>
                       <br /> PNDbotics
                       <br /> &nbsp &nbsp
                     </li>
                 <li>
-                    <img src="./images/jiazhou2.png" height="80px"><br>
-                    <a href="https://jiazhou-garland.github.io/" >
                                  David Yan
                                 </a>
                                 <br /> PNDbotics
@@ -62,8 +56,7 @@
                             </li>
 
                             <li>
-			    <img src="./images/Addision.png" height="80px"><br>
-                        <a href="https://addisonwang2013.github.io/vlislab/linwang.html">
+
                            Jingkai Sun
                         </a>
                         <br /> MICS Thrust, HKUST(GZ) 
@@ -76,9 +69,7 @@
             <div class="col-md-12 text-center">
                 <ul class="list-inline">
                     <li>
-			<img src="./images/huiyi1.png" height="80px"><br>
-                        <a href="https://qc-ly.github.io/" >
-                           Yiqun Duan*
+                           Yiqun Duan
                         </a>
                         
                         <br /> AI Centre, UTS
@@ -87,16 +78,12 @@
                     </li>
 
                     <li>
-			<img src="./images/xu1.png" height="80px"><br>
-			<a href="https://zhengxujosh.github.io/" >
                         Arthur Zhang
                       </a>
                       <br /> PNDbotics
                       <br /> &nbsp &nbsp
                     </li>
                 <li>
-                    <img src="./images/jiazhou2.png" height="80px"><br>
-                    <a href="https://jiazhou-garland.github.io/" >
                                  Renjing Xu
                                 </a>
                                 <br /> MICS Thrust, HKUST(GZ)
