--- a/index.html
+++ b/index.html
@@ -99,44 +99,23 @@
                 <div class="col-md-8 col-md-offset-2 text-center">
                     <ul class="nav nav-pills nav-justified">
                         <li>
-			    <a href="">
+			    <a href="https://arxiv.org/pdf/2402.18294.pdf">
                             <img src="./images/arxiv.png" height="100px"><br>
                                 <h4><strong>Paper</strong></h4>
                             </a>
                         </li>
                         <li>
-			    <!-- <a href="">
+			     <a href="https://www.youtube.com/watch?v=7hK2ySYBa1I">
                             <img src="./images/youtube_icon.jpg" height="100px"><br>
-                                <h4><strong>Video</strong></h4>
+                                <h4><strong>Youtube</strong></h4>
                             </a>
                         </li>
-                        <li> -->
-                            <a href="">
-                            <img src="./images/github_icon.jpg" height="100px"><br>
-                                <h4><strong>Code</strong></h4>
+                        <li> 
+                            <a href="https://www.bilibili.com/video/BV1KZ421a7gP/?spm_id_from=333.337.search-card.all.click&vd_source=dfb078abd1e90d78a5f2d515734e9d86">
+                            <img src="./images/bilibili_icon.jpg" height="100px"><br>
+                                <h4><strong>Bilibili</strong></h4>
                             </a>
                         </li>
-
-                        <!-- <li>
-                            
-                            <img src="./images/colab_icon.jpg" height="100px"><br>
-                                <h4><strong>Colab</strong></h4>
-                            </a>
-                        </li> -->
- 
-
-<!--                         <li>
-                            <a href="https://github.com/jiazhou-garland/ELIP/blob/master/Appendix.pdf">
-                            <img src="./images/slide_icon.jpg" height="100px"><br>
-                                <h4><strong>Supp</strong></h4>
-                            </a>
-                        </li>                      -->
-                        <li>
-                            <a href="https://vlislab22.github.io/vlislab/">
-                            <img src="./images/lab_logo.png" height="100px"><br>
-                                <h4><strong>Vlislab</strong></h4>
-                            </a>
-                        </li>                       
                       
                     </ul>
                 </div>
@@ -149,34 +128,11 @@
                     Abstract
                 </h3>
                 <p class="text-justify">
-                    We present UniBind, a flexible and efficient approach
-                    that learns a unified representation space for seven diverse
-                    modalities - image, text, audio, point cloud, thermal, video,
-                    and event data. Existing works, e.g., ImageBind, treat
-                    the image as the central modality and build an image-
-                    centered representation space; however, the space may be
-                    sub-optimal as it leads to an unbalanced representation
-                    space among all modalities. Moreover, the category names
-                    are directly used to extract text embeddings for the down-
-                    stream tasks, making it hardly possible to represent the se-
-                    mantics of multi-modal data. The "out-of-the-box" insight
-                    of our UniBind is to make the alignment centers modality-
-                    agnostic and further learn a unified and balanced repre-
-                    sentation space, empowered by the large language mod-
-                    els (LLMs). UniBind is superior in its flexible application
-                    to all CLIP-style models and delivers remarkable perfor-
-                    mance boosts. To make this possible, we 1) construct a
-                    knowledge base of text with the help of LLMs and multi-
-                    modal LLMs; 2) adaptively build LLM-augmented class-
-                    wise embedding centers on top of the knowledge base and
-                    encoded visual embeddings; 3) align all the embeddings
-                    to the LLM-augmented embedding centers via contrastive
-                    learning to achieve a unified and balanced representation
-                    space. UniBind shows strong zero-shot recognition perfor-
-                    mance gains over prior arts by an average of 6.36%. Fi-
-                    nally, we achieve new state-of-the-art performance, e.g., a
-                    6.75% gain on ImageNet, on the multi-modal fine-tuning
-                    setting while reducing 90% of the learnable parameters
+	Recently, humanoid robots have made significant advances in their ability to perform challenging tasks due to the deployment of Reinforcement Learning (RL), however, the inherent complexity of humanoid robots, including the difficulty of designing complicated reward functions and training entire sophisticated systems, still poses a notable challenge.
+To conquer these challenges, after many iterations and in-depth investigations, we have meticulously developed a full-size humanoid robot, "Adam", whose innovative structural design greatly improves the efficiency and effectiveness of the imitation learning process.
+In addition, we have developed a novel imitation learning framework based on an adversarial motion prior, which applies not only to Adam but also to humanoid robots in general.
+Using the framework, Adam can exhibit unprecedented human-like characteristics in locomotion tasks.
+Our experimental results demonstrate that the proposed framework enables Adam to achieve human-comparable performance in complex locomotion tasks, marking the first time that human locomotion data has been used for imitation learning in a full-size humanoid robot.
                 </p>
             </div>
         </div>
