--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@ Our experimental results demonstrate that the proposed framework enables Adam to
 
         <!-- ##### Results #####-->
 
-     <div class="row">     
+<!--      <div class="row">     
         <div class="col-md-8 col-md-offset-2">
             <h3>
                 Overall framework of our UniBind
@@ -151,71 +151,23 @@ Our experimental results demonstrate that the proposed framework enables Adam to
 		</p>
             <img src="./images/UniBind.png" class="img-responsive" alt="vis_res"  class="center" >
       	</div>
-    </div>
+    </div> -->
 <div class="row">     
         <div class="col-md-8 col-md-offset-2">
             <h3>
-                The results of the emergent Zero-shot and Fine-tuning Recognition on <strong>six</strong> modalities.
+                The top image displays the humanoid robot Adam walking on unseen terrain, and the bottom image shows Adam moving from a standing position to running.
             </h3>
-            	<img src="./images/result.png" class="img-responsive" alt="vis_res"  class="center" >
+            	<img src="./images/top_result.png" class="img-responsive" alt="vis_res"  class="center" >
       	</div>
-    </div>
+    </div>	    
 <div class="row">     
         <div class="col-md-8 col-md-offset-2">
             <h3>
-                The t-SNE visualization of representation space.
+                The results of the whole-body humanoid robot locomotion. (A)(B) demonstrate the robot's robust locomotion performance under external disturbances. <strong>Especially, it demonstrated the characteristic of "straight-knee"</strong> (C)(D) show the human-like swinging of the upper limbs. (E)(F) displays the robustness and human-likeness on unknown and complex terrains. <strong>(G)(H) present for the first time the humanoid robot's "heel-to-toe" running and walking gaits.</strong>
             </h3>
-		<img src="./images/result_space.png" class="img-responsive" alt="vis_res"  class="center" >
+            	<img src="./images/experiment_result.png" class="img-responsive" alt="vis_res"  class="center" >
       	</div>
     </div>
-<div class="row">     
-        <div class="col-md-8 col-md-offset-2">
-            <h3>
-                The t-SNE visualization of embedding centers.
-            </h3>
-		<img src="./images/result_tsne.png" class="img-responsive" alt="vis_res"  class="center" >
-      	</div>
-    </div>
-<!-- ####      <div class="col-md-8 col-md-offset-2">
-          <h3>
-              Comparison on octree representations
-          </h3>
-          <p class="text-justify">
-            DOT shows the more compact structure of DOT, 
-            resulting in fewer ray intersections, explaining our significant rendering speed boost.
-
-          </p>
-		  <img src="./image/dot_cp.png" class="img-responsive" alt="vis_res" class="center"><br>
-    </div>   
-    <div class="col-md-8 col-md-offset-2">
-        <h3>
-            Comparison on visual quality and memory consumption
-        </h3>
-        <p class="text-justify">
-            DOT provides more details in complex regions, such as sharper reflections on windows and more evident edges on fences. 
-
-        </p>
-        <img src="./image/dot_cp2.png" class="img-responsive" alt="vis_res" class="center"><br>
-    </div>     
-    </div>
-
-
-		      
-    	<div class="row">      
-     <div class="col-md-8 col-md-offset-2">
-          <h3>
-              Demo 
-          </h3>   
-    </div>   
-      
-    <div class="col-md-8 col-md-offset-2">
-
-            <video width="800"  controls >
-                <source src="./video/dot.mp4" type="video/mp4">
-              Your browser does not support HTML video.
-            </video>   
-    </div>          
-      </div>  ####-->
    <!-- ##### BibTex #####-->
         <hr>
         <div class="row">
@@ -227,10 +179,10 @@ Our experimental results demonstrate that the proposed framework enables Adam to
                 <div class="row align-items-center">
                     <div class="col py-3">
                         <pre class="border">             
-@article{,
-  title={UniBind: LLM-Augmented Unified and Balanced Representation Space to Bind Them All},
-  author={Lyu,Yuanhuiyi and Zheng,Xu and Zhou,Jiazhou and Wang,Lin},
-  journal={arXiv},
+@article{zhang2024whole,
+  title={Whole-body Humanoid Robot Locomotion with Human Reference},
+  author={Zhang, Qiang and Cui, Peter and Yan, David and Sun, Jingkai and Duan, Yiqun and Zhang, Arthur and Xu, Renjing},
+  journal={arXiv preprint arXiv:2402.18294},
   year={2024}
 }
 </pre>
