--- a/index.html
+++ b/index.html
@@ -155,7 +155,9 @@ Our experimental results demonstrate that the proposed framework enables Adam to
 <div class="row">     
         <div class="col-md-8 col-md-offset-2">
             <h3>
+		    <p class="text-justify">
                 The top image displays the humanoid robot Adam walking on unseen terrain, and the bottom image shows Adam moving from a standing position to running.
+		    </p>
             </h3>
             	<img src="./images/top_result.png" class="img-responsive" alt="vis_res"  class="center" >
       	</div>
@@ -163,8 +165,10 @@ Our experimental results demonstrate that the proposed framework enables Adam to
 <div class="row">     
         <div class="col-md-8 col-md-offset-2">
             <h3>
+		    <p class="text-justify">
                 The results of the whole-body humanoid robot locomotion. (A)(B) demonstrate the robot's robust locomotion performance under external disturbances. <strong>Especially, it demonstrated the characteristic of "straight-knee"</strong> (C)(D) show the human-like swinging of the upper limbs. (E)(F) displays the robustness and human-likeness on unknown and complex terrains. <strong>(G)(H) present for the first time the humanoid robot's "heel-to-toe" running and walking gaits.</strong>
-            </h3>
+		    </p>
+	    </h3>
             	<img src="./images/experiment_result.png" class="img-responsive" alt="vis_res"  class="center" >
       	</div>
     </div>
