--- a/index.html
+++ b/index.html
@@ -140,36 +140,25 @@ Our experimental results demonstrate that the proposed framework enables Adam to
  
 
         <!-- ##### Results #####-->
-
-<!--      <div class="row">     
-        <div class="col-md-8 col-md-offset-2">
-            <h3>
-                Overall framework of our UniBind
-            </h3>
-		<p class="text-justify">
-			An overview of our UniBind. Firstly, we construct the <strong>knowledge base</strong>, then learn a unified representation space via <strong>LLM-augmented contrastive learning</strong>, powered by the knowledge base. Lastly, We utilize the <strong>embedding center</strong> localized by the knowledge base to obtain the predictions.
-		</p>
-            <img src="./images/UniBind.png" class="img-responsive" alt="vis_res"  class="center" >
-      	</div>
-    </div> -->
 <div class="row">     
         <div class="col-md-8 col-md-offset-2">
             <h3>
+		    Results
+	    </h3>
 		    <p class="text-justify">
                 The top image displays the humanoid robot Adam walking on unseen terrain, and the bottom image shows Adam moving from a standing position to running.
 		    </p>
-            </h3>
+            
             	<img src="./images/static/top.pdf" class="img-responsive" alt="vis_res"  class="center" >
       	</div>
     </div>	    
 <div class="row">     
         <div class="col-md-8 col-md-offset-2">
-            <h3>
 		    <p class="text-justify">
                 The results of the whole-body humanoid robot locomotion. (A)(B) demonstrate the robot's robust locomotion performance under external disturbances. <strong>Especially, it demonstrated the characteristic of "straight-knee"</strong> (C)(D) show the human-like swinging of the upper limbs. (E)(F) displays the robustness and human-likeness on unknown and complex terrains. <strong>(G)(H) present for the first time the humanoid robot's "heel-to-toe" running and walking gaits.</strong>
 		    </p>
-	    </h3>
-            	<img src="./images/static/perfomence.png" class="img-responsive" alt="vis_res"  class="center" >
+	    
+            	<img src="./images/static/perfom.png" class="img-responsive" alt="vis_res"  class="center" >
       	</div>
     </div>
    <!-- ##### BibTex #####-->
