--- a/index.html
+++ b/index.html
@@ -4,10 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <title>UniBind</title>
-    <meta name="author" content="Yuanhuiyi Lyu, Xu Zheng">
-    <meta name="description" content="Project page of UniBind">
+    <meta name="author" content="Qiangzhang, Peter Cui">
+    <meta name="description" content="Project page of Whole-body Humanoid Robot Locomotion with Human Reference">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <link rel="icon" type="image/png" href="eccv_logo.png">
     <!-- Format -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
