--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <title>UniBind</title>
+    <title>Adam</title>
     <meta name="author" content="Qiangzhang, Peter Cui">
     <meta name="description" content="Project page of Whole-body Humanoid Robot Locomotion with Human Reference">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
