--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@ Our experimental results demonstrate that the proposed framework enables Adam to
                 The top image displays the humanoid robot Adam walking on unseen terrain, and the bottom image shows Adam moving from a standing position to running.
 		    </p>
             
-            	<img src="./images/static/top.jpg" class="img-responsive center" alt="vis_res"  class="center" >
+            	<img src="./images/static/top.jpg" class="img-responsive center" alt="vis_res">
       	</div>
     </div>	    
 <div class="row">     
