--- a/index.html
+++ b/index.html
@@ -157,7 +157,8 @@ Our experimental results demonstrate that the proposed framework enables Adam to
                 The results of the whole-body humanoid robot locomotion. (A)(B) demonstrate the robot's robust locomotion performance under external disturbances. <strong>Especially, it demonstrated the characteristic of "straight-knee"</strong> (C)(D) show the human-like swinging of the upper limbs. (E)(F) displays the robustness and human-likeness on unknown and complex terrains. <strong>(G)(H) present for the first time the humanoid robot's "heel-to-toe" running and walking gaits.</strong>
 		    </p>
 	    
-            	<img src="./images/static/perform.png" class="img-responsive center" alt="vis_res" >
+<!--             	<img src="./images/static/perform.png" class="img-responsive center" alt="vis_res" > -->
+		<img src="./images/static/perform.png" >
       	</div>
     </div>
    <!-- ##### BibTex #####-->
