--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@ Our experimental results demonstrate that the proposed framework enables Adam to
 		    </p>
 	    
 <!--             	<img src="./images/static/perform.png" class="img-responsive center" alt="vis_res" > -->
-		<img src="./images/static/perform.png" >
+		<img src="./images/static/perform.png" ><br>
       	</div>
     </div>
    <!-- ##### BibTex #####-->
