--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@ Our experimental results demonstrate that the proposed framework enables Adam to
                 The top image displays the humanoid robot Adam walking on unseen terrain, and the bottom image shows Adam moving from a standing position to running.
 		    </p>
             
-            	<img src="./images/static/top.jpg" class="img-responsive center" alt="vis_res">
+            	<img src="./static/images/top.jpg" class="img-responsive center" alt="vis_res">
       	</div>
     </div>	    
 <div class="row">     
@@ -157,8 +157,7 @@ Our experimental results demonstrate that the proposed framework enables Adam to
                 The results of the whole-body humanoid robot locomotion. (A)(B) demonstrate the robot's robust locomotion performance under external disturbances. <strong>Especially, it demonstrated the characteristic of "straight-knee"</strong> (C)(D) show the human-like swinging of the upper limbs. (E)(F) displays the robustness and human-likeness on unknown and complex terrains. <strong>(G)(H) present for the first time the humanoid robot's "heel-to-toe" running and walking gaits.</strong>
 		    </p>
 	    
-<!--             	<img src="./images/static/perform.png" class="img-responsive center" alt="vis_res" > -->
-		<img src="./images/static/perform.png" ><br>
+            	<img src="./static/images/perform.png" class="img-responsive center" alt="vis_res" >
       	</div>
     </div>
    <!-- ##### BibTex #####-->
