--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                     </li>
 
                     <li>
-                        Cui Petter*
+                         Peter Cui*
                       </a>
                       <br /> PNDbotics
                       <br /> &nbsp &nbsp
